# nifti_clib

./: CMakeLists.txt
cifti/: CMakeLists.txt
conda.build/: build.sh  meta.yaml
fsliolib/: CMakeLists.txt
nifti2/: CMakeLists.txt
nifticdf/: CMakeLists.txt
niftilib/: CMakeLists.txt
real_easy/parent_project_demo/: CMakeLists.txt
real_easy/parent_project_demo/cmake/: SillyDemoConfig.cmake
real_easy/parent_project_demo/src/: CMakeLists.txt
znzlib/: CMakeLists.txt
